--- a/07-proyecto/index.html
+++ b/07-proyecto/index.html
@@ -14,10 +14,10 @@
 <body>
   <h2>ZAPATILLAS DEPORTIVAS-SITE</2>
 
-    <nav class="navbar navbar-expand-lg barra" > 
-      
+    <nav class="navbar navbar-expand-lg barra">
+
       <div class="container-fluid">
-        <a class="navbar-brand" href="/paginas/nike.html"> <img src="/assest/Nike-Logo-Transparent-Free-PNG.png" alt="" width="55"></a>
+        <a class="navbar-brand" href="#"> <img src="/cubo-3d.png" alt="" width="47"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -25,30 +25,39 @@
 
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/paginas/adidas.html"> <img
-                  src="/assest/didap.png" alt="" width="55"></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                aria-expanded="false">
-                Dropdown
+
+            <li class="nav-link active"> <a aria-current="page" href="/paginas/nike.html"> <img
+                  src="/assest/Nike-Logo-Transparent-Free-PNG.png" alt="" width="75">
               </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li>
-                  <hr class="dropdown-divider">
-                </li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
-              </ul>
+
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/paginas/adidas.html"> <img src="/assest/didap.png"
+                  alt="" width="55"></a>
             </li>
 
+            <li class="nav-link"> <a aria-current="page" href="/paginas/ascics.html"><img src="/assest/asics logo2.jpg"
+                  alt="" width="65"></a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/paginas/newbalence.html"> <img
+                  src="/assest/newbalance.png" alt="" width="70"></a>
+            </li>
+
+
+            <li class="nav-link active"> <a aria-current="page" href="/paginas/puma.html"> <img
+                  src="/assest/Puma logo.png" alt="" width="80">
+              </a>
+
+
+            </li>
+
+
           </ul>
+
+
 
 
 
@@ -62,7 +71,29 @@
       </div>
     </nav>
 
-
+    <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active" data-bs-interval="10000">
+          <img src="/assest/imgcarruselwinflo8.jpg" class="d-block w-100" alt="">
+        </div>
+        <div class="carousel-item" data-bs-interval="2000">
+          <img src="/assest/imgcarrusel7.jpg" class="d-block w-100" alt="">
+        </div>
+        <div class="carousel-item">
+          <img src="/assest/imgcarrusel8.jpg" class="d-block w-100" alt="adidas">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
+        data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval"
+        data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
